<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_applicar"
            android:icon="@drawable/car"
            android:title="@string/menu_applicar" />
        <item
            android:id="@+id/nav_stagiaires"
            android:icon="@drawable/form"
            android:title="@string/menu_stagiaires"/>
        <item
            android:id="@+id/nav_katz"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_katz" />
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_roadsheets"
            android:enabled="false"/>

        <item
            android:id="@+id/nav_materiel"

            android:title="@string/menu_materiel"
            android:enabled="false"/>
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->
</menu>
